# social-ops-kit

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: architecture.md  migration-inventory.md  oss-roadmap.md  status-summary.md  style-guide.md
docs/plans/: initial-refactor-plan.md  phase-1-runtime-migration.md
scripts/: douyin_live_messages.js  xhs_live_actions.mjs
skills/douyin-content-strategy/: SKILL.md
skills/social-ops-review-loop/: SKILL.md
skills/xhs-content-strategy/: SKILL.md
src/social_ops_kit/: __init__.py  cli.py  config.py  models.py  registry.py
src/social_ops_kit/mcp/: __init__.py  server.py  tools.py
tests/: test_config.py  test_douyin_inspect_comments_runtime.py  test_douyin_messages_runtime.py  test_douyin_publish_runtime.py  test_douyin_search_runtime.py  test_douyin_state.py  test_manifest_scope.py  test_mcp_server_layer.py  test_readme_tool_matrix.py  test_registry.py  test_xhs_draft_runtime.py  test_xhs_live_runtime.py  test_xhs_posts_comments_runtime.py  test_xhs_runtime_layout.py  test_xhs_search_runtime.py
