[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "social-ops-kit"
version = "0.1.0"
description = "Clean skill + MCP foundation for Douyin and Xiaohongshu operations"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Jiang HuPo + Hermes" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
mcp = ["mcp>=1.0.0"]

[project.scripts]
social-ops-kit = "social_ops_kit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
